fixed navbar collapse- fixed up animation

--- a/trial_1/css/style.css
+++ b/trial_1/css/style.css
@@ -43,7 +43,116 @@ body {
   margin-bottom:0px;
 }
 
-.top-nav-collapse{
+/******************************************************************************NAVBAR*/
+.navbar-custom {
+    margin-bottom: 0;
+    border-bottom: 1px solid rgba(255,255,255,.3);
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    background-color: #03103e;
+    color:#fff;
+}
+
+.navbar-custom .navbar-brand {
+    font-weight: 700;
+}
+
+.navbar-custom .navbar-brand:focus {
+    outline: 0;
+}
+
+.navbar-custom .navbar-brand .navbar-toggle {
+    padding: 4px 6px;
+    font-size: 16px;
+    color: #fff;
+}
+
+.navbar-custom .navbar-brand .navbar-toggle:focus,
+.navbar-custom .navbar-brand .navbar-toggle:active {
+    outline: 0;
+}
+
+.navbar-custom a {
+    color: #fff;
+}
+
+.navbar-custom .nav li a {
+    -webkit-transition: background .3s ease-in-out;
+    -moz-transition: background .3s ease-in-out;
+    transition: background .3s ease-in-out;
+}
+
+.navbar-custom .nav li a:hover {
+    outline: 0;
+    color: rgba(255,255,255,.8);
+    background-color: transparent;
+}
+
+.navbar-custom .nav li a:focus,
+.navbar-custom .nav li a:active {
+    outline: 0;
+    background-color: transparent;
+}
+
+.navbar-custom .nav li.active {
+    outline: 0;
+}
+
+.navbar-custom .nav li.active a {
+    background-color: rgba(255,255,255,.3);
+}
+
+.navbar-custom .nav li.active a:hover {
+    color: #fff;
+}
+
+/*all widths above tablet/mobile styles*/
+
+@media(min-width:768px) {
+    .navbar-custom {
+        padding: 20px 0;
+        border-bottom: 0;
+        letter-spacing: 1px;
+        background: 0 0;
+        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        transition: background .5s ease-in-out,padding .5s ease-in-out;
+    }
+
+    .navbar-custom.top-nav-collapse {
+        padding: 0;
+        border-bottom: 1px solid rgba(255,255,255,.3);
+        background: #03103e;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*.top-nav-collapse{
   background-color: white;
   color:black;
 }
@@ -110,7 +219,7 @@ body {
 
 .navbar-custom .nav li.active a:hover {
     color: black;
-}
+}*/
 
 
 :-moz-selection {
@@ -371,7 +480,7 @@ body {
   max-width: 1280px;
   width:95%;
   /*padding: 40px 180px;*/
-  background-color: #f8f8f8;
+  /*background-color: #f8f8f8;*/
 
 }
 
@@ -544,7 +653,7 @@ figure.effect:hover img{
 }
 
 
-@media (min-width:768px) {
+/*@media (min-width:768px) {
     .navbar-custom {
         padding: 0;
         border-bottom: 0;
@@ -561,7 +670,7 @@ figure.effect:hover img{
         }
 
 }
-
+*/
 
 @media only screen and (max-width: 768px){
     .landing-box{
